--- a/contacts.html
+++ b/contacts.html
@@ -239,7 +239,7 @@
                         <fieldset class="col-md-12 col-sm-12">
                     <h4>Interested employer's may download my resume by just clicking the button below. Or please do subscribe so i can email you back for discounts and promo based on our services offered.</h4>
                     <br>
-                    <a href="" class="button">Download CV Hire Me!</a>
+                    <a href="https://drive.google.com/uc?export=download&id=1g54kDSCt8BUxJEuBsY9SSkHMChjBzeJR" class="button">Download CV Hire Me!</a>
                     <a href="https://mailchi.mp/2084cc75ede0/ronx-website-subscriber" class="button">SUBSCRIBE</a>
                 </fieldset>
                         
